--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-ollama==0.3.0
-jinja2==3.1.2
-weasyprint==63.1
-pyyaml==6.0
-pillow==10.1.0
-lxml==4.9.3
+ollama
+jinja2
+weasyprint
+pyyaml
+pillow
+lxml
